src/test/deca/context/valid/sansObjet/UseOfPrintx.deca
{
    int x = 2020;
    printx(x);
}