src/test/deca/context/invalid/sansObjet/CastToFloat.deca
{
    int x = 2020;
    float a = (String) (x);
}
